--- a/src/public/styles/app.css
+++ b/src/public/styles/app.css
@@ -1,192 +1,3 @@
-#app {
-    background-color: #000;
-    color: #f2f3f5;
-    display: flex;
-    max-height: 1080px;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    font-family: 'Karla', sans-serif; 
-    /* overflow-x: scroll; */
-}
-
-#sidenav-content {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    position: fixed;
-    overflow-x: hidden;
-    /* max-height: 1080px; */
-    /* overflow-x: scroll; */
-}
-
-a {
-    text-decoration: none;
-    cursor: pointer;
-    color: #f2f3f5;
-}
-
-button {
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-}
-
-button:hover {
-    transform: scale(1.05);
-}
-
-button:focus {
-    outline: none;
-}
-
-.logo {
-    display: block;
-    align-items: center;
-    margin: 0;
-    padding-left: 28px;
-    padding-right: 28px;
-    padding-top: 40px;
-    font-family: 'Roboto Slab';
-}
-
-.kinukoniya {
-    font-size: 24px;
-    font-weight: 400;
-    margin: 0;
-}
-
-.bookstore {
-    font-size: 12px;
-    font-weight: 400;
-    margin: 0;
-}
-
-.logo > h1 {
-    margin: 0;
-}
-.logo > p {
-    margin: 0;
-}
-
-.sidenav {
-    background-color: #1c2a39;
-    height: 100%;
-    width: 240px;
-}
-
-.sidenav-opt {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-inline-start: 24px;
-    align-items: flex-start;
-}
-
-.sidenav-opt > li {
-    justify-content: flex-start;
-    margin-bottom: 16px;
-}
-
-.nav-btn {
-    display: flex;
-    gap: 12px;
-    align-items: center;
-    font-size: 16px;
-}
-
-.main-container {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    background-color: #FAFAFA;
-    color: #333;
-    position: relative;
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
-.topnav {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 48px;
-    background-color: #f2f3f5;
-    background: var(--Background-Light, #FAFAFA);
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
-    justify-content: space-between;
-}
-
-.topnav-label {
-    display: flex;
-    gap: 8px;
-    padding: 12px;
-    margin-left: 12px;
-    align-items: center;
-    font-size: 18px;
-    color: #F18912;
-    font-size: 16px;
-}
-
-.topnav-menu {
-    display: flex;
-    gap: 8px;
-    padding: 12px;
-    align-items: center;
-    margin-right: 12px;
-}
-
-.topnav-btn {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    padding: 4px;
-    margin: 0 4px;
-    background-color: #1c2a39;
-    border-radius: 4px;
-    border: none;
-}
-
-.secondary-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    /* gap: 4rem; */
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-.hero-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: fit-content;
-    align-items: center;
-    margin: 32px;
-    margin-bottom: 8px;
-}
-
-.dashboard-section{
-    display: block;
-    justify-content: center;
-    height: 70%;
-    margin-bottom: 200px;
-    padding: 20px;
-}
-
-::-webkit-scrollbar {
-    width: 0; /* Set width to 0 to hide the track */
-}
-
 #input-form {
     background-color: white;
     color: #333;
@@ -221,74 +32,6 @@ button:focus {
     cursor: pointer;
     width: 44px;
     height: 44px;
-}
-
-.inner-hero-banner{
-    float: right;
-}
-
-.hero-banner {
-    display: flex;
-    width: 90%;
-    justify-content: space-evenly;
-    justify-items: center;
-    align-items: center;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    margin-left: 20px;
-    margin-right: 20px;
-    gap: 24px;
-}
-
-.hero-welcome {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    width: 100%;
-    order: 0;
-}
-
-@media screen and (max-width: 768px) {
-    .hero-banner{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-    }
-
-    .hero-banner > img{
-        margin: 0 auto;
-        margin-top: 12px;
-    }
-
-    .hero-welcome{
-        order: 2;
-    }
-}
-
-.hero-header {
-    font-size: 28px;
-    font-weight: 700;
-    margin: 0;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    /* grid-column: 0 / 1; */
-}
-.hero-desc {
-    font-size: 16px;
-    font-weight: 400;
-    margin: 0;
-    margin-top: 16px;
-    margin-bottom: 16px;
-}
-
-#hero-image {
-    width: 20rem;
-    height: 100%;
-}
-
-.hero-btn {
-    margin-top: 16px;
-    margin-bottom: 16px;
 }
 
 .btn-standard {
@@ -351,7 +94,7 @@ button:focus {
     margin-bottom: 12px;
 }
 
-.dashboard-header {
+.card-header-desc {
     font-size: 20px;
     font-weight: 700;
     margin: 0;
