--- a/src/public/styles/template/globals.css
+++ b/src/public/styles/template/globals.css
@@ -172,7 +172,7 @@ body {
     padding-right: 20px;
     padding-top: 12px;
     padding-bottom: 12px;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(120px, 180px));
     align-content: start;
     row-gap: 4%;
     overflow-y: hidden;
