--- a/src/public/styles/template/globals.css
+++ b/src/public/styles/template/globals.css
@@ -1,6 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@300;400;700&family=Roboto+Slab:wght@400;700&display=swap");
 
 /* Essentials */
+#root {
+    color: #f2f3f5;
+    display: flex;
+    max-height: 1080px;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-family: 'Karla', sans-serif; 
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -134,15 +146,13 @@ body {
     height: 100%;
     width: fit-content;
     margin-left: 16px;
-    /* margin-right: 16px; */
-    /* margin: 140px auto; */
 }
 .select-menu .select-btn{
     display: flex;
     height: 40px;
     background: #fff;
     padding: 20px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
     border-radius: 8px;
     align-items: center;
@@ -156,7 +166,7 @@ body {
     min-width: 11rem;
 }
 .select-btn i{
-    font-size: 25px;
+    font-size: 24px;
     transition: 0.3s;
 }
 .select-btn-text{
@@ -255,6 +265,7 @@ body {
     position: relative;
     display: grid;
     align-items: start;
+    height: 100%;
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
@@ -263,7 +274,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(124px, 148px));
     align-content: start;
     row-gap: 4%;
-    overflow-y: hidden;
+    overflow-y: scroll;
     overflow-x: hidden;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
@@ -367,6 +378,7 @@ body {
 }
 
 .book-card-brief {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -398,7 +410,6 @@ body {
 }
 
 .book-img-brief {
-    /* height: 12rem; */
     height: 11rem;
     border-radius: 8px;
     margin-bottom: 16px;
