--- a/src/public/styles/template/globals.css
+++ b/src/public/styles/template/globals.css
@@ -10,7 +10,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    font-family: 'Karla', sans-serif; 
+    font-family: "Karla", sans-serif; 
 }
 
 * {
