--- a/src/public/styles/template/globals.css
+++ b/src/public/styles/template/globals.css
@@ -125,6 +125,18 @@ body {
     margin-right: 12px;
 }
 
+.category-search {
+    font-size: 12px;
+    color: #333;
+    height: 100%;
+    width: 100%;
+}
+
+#category-query {
+    font-size: 14px;
+    margin-bottom: 4px;
+}
+
 ::placeholder {
     color: #333;
     opacity: 0.7; 
@@ -161,7 +173,6 @@ body {
     border: 0.5px solid var(--Subtle-Stroke, rgba(209, 209, 209, 0.50));
     box-shadow: 0.5px 0.5px 0.5px 0px rgba(0, 0, 0, 0.10) inset;
 }
-
 .select-btn {
     min-width: 11rem;
 }
