--- a/src/public/styles/cart/cart.css
+++ b/src/public/styles/cart/cart.css
@@ -115,8 +115,13 @@
     margin: 4px;
     font-size: 20px;
     color: transparent;
+    border-radius: 50%;
 }
 
 .bx-x:hover {
-    color: black;
+    color: red;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    background-color: white;
 }
