--- a/src/public/styles/template/globals.css
+++ b/src/public/styles/template/globals.css
@@ -461,3 +461,102 @@ body {
     background: cover no-repeat;
     background-size: cover;
 }
+
+/* Toast Box */
+.toast {
+    position: absolute;
+    top: 64px;
+    right: 32px;
+    border-radius: 12px;
+    background: white;
+    color: white;
+    padding: 20px 32px 20px 24px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border-left: 6px solid #4070F4;
+    overflow: hidden;
+    transform: translate(calc(100% + 32px));
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
+  }
+  
+  .toast.active {
+    transform: translate(0%);
+  }
+  
+  .toast .toast-content {
+    display: flex;
+    align-items: center;
+  }
+  
+  .toast .close {
+    position: absolute;
+    top: 12px;
+    right: 16px;
+    padding: 4px;
+    cursor: pointer;
+    opacity: 0.75;
+    color: #333;
+    font-size: 20px;
+  }
+  
+  .toast .close:hover {
+    opacity: 1;
+  }
+  
+  .toast .toast-progress {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: azure;
+    opacity: 0.75;
+    box-shadow: 0.2px 0.2px 0px 0px rgba(0, 0, 0, 0.10) inset;
+  }
+  
+  .toast .toast-progress:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .toast-progress.active:before {
+    animation: progress 5s linear forwards;
+  }
+  
+  @keyframes progress {
+    100% {
+      right: 100%;
+    }
+  }
+  
+  .toast-content .toast-emblem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 32px;
+    width: 32px;
+    color: azure;
+    font-size: 20px;
+    border-radius: 50%;
+  }
+  
+  .toast-content .toast-message {
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px;
+  }
+  
+  .toast-message .text {
+    font-size: 18px;
+    font-weight: 400;
+    color: #333;
+    opacity: 0.75;
+  }
+  
+  .toast-message .text.notif-msg {
+    font-weight: 600;
+    color: black;
+  }
