--- a/src/public/styles/cart/cart.css
+++ b/src/public/styles/cart/cart.css
@@ -125,3 +125,59 @@
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     background-color: white;
 }
+
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
+
+.confirmationPopup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: fit-content;
+    height: fit-content;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.popupContent {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    text-align: flex-start;
+    padding: 36px;
+    border-radius: 8px;
+    gap: 16px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.popupButtons {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    margin-top: 20px;
+    gap: 16px;
+}
+
+#confirmButton {
+    font-size: 14px;
+    padding:12px;
+}
+
+#cancelButton {
+    font-size: 14px;
+    padding:12px;
+    background-color: transparent;
+    box-shadow: none;
+    color: #66acff;
+}
